References https://mariadb.atlassian.net/browse/MDEV-4136 Fixes to stop wsrep replicator when thread pool scheduler is in use